# Changes

2019-09

    + Adds performance tests unsing [phpbench](github.com/phpbench) for the 
      library and also for common or private intresting php performance tests

    + Mumsys_Variable_*
        + Enables 'strict_types'
        + Improves tests

    + Mumsys_Variable_Abstract
        + Adds 'unixtime' property

    + Mumsys_Variable_Item_Default
        + Improves __construct()

    + Mumsys_Variable_Manager_Default
        + Enables 'strict_types'
        + Adds TYPE_INVALID_UNIXTIME for unixtime property/ validation
        + Fixes CS
        + Fixes missing $data param to externalsApply() to callbacksApply( $data )
    
2018-02-02
    - Adds misc path as external for coding style, vc checks


2018-01-06/07
    - Merges open tasks to unstable branch
    - Updates composer bindings. You can use: #> ./composer for maintaining
      external code from now on.


2018-01-05
    Mumsys_GetOpts
    - VERSION 3.6.0
    - Adds action groups (or optional parameters handling as groups) like:
        eg: script.php --globalOption action1 --host ab action2 --host cd
        eg: script.php doThis -p 123 doThat now
        - Existing configurations will be used as is as global whitelist or
          needs to be extended to new action groups.
        - Return values will return like befor when not using the addition.
    - Improves phpdoc/ code
    - Updates Tests


2017-12
    Mumsys_Logger_*
    - Improves setup and tests


2016-07-14
    Mumsys_Variable_*
    Mumsys_Variable_Item_*
    Mumsys_Variable_Manager_*
    - Migrate from old Mumsys_Field classes
    - Adds tests


2016-05-27
    Mumsys_Cache
    - marked as depricated
    - Adds removeCache() methode
    - Updates tests
    - Improves coding style
    Mumsys_Cache_Default
    - Init class which uses Mumsys_Cache_File
    Mumsys_Cache_File
    - Init class
    - Implemention like Mumsys_Cache BUT now un/serialise will be used to also
      cache objects
    Mumsys_Cache_Interface